[build-system]
requires = ["setuptools", "wheel", "hatchling"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["build", "twine"]
async = ["httpx"]

[tool.setuptools.packages.find]
where = ["custom_components"]

[tool.setuptools.dynamic]
version = { attr = "reflex_stripe.__version__" }

[tool.hatch.version]
path = "custom_components/reflex_stripe/__init__.py"

[project]
name = "reflex-stripe"
description = "Reflex custom component wrapping @stripe/react-stripe-js for Express Checkout and Embedded Checkout"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "SyntropyHealth" }]
keywords = ["reflex", "reflex-custom-components", "stripe", "payments", "checkout"]
dynamic = ["version"]

dependencies = [
    "reflex>=0.8.0",
    "stripe>=12.0.0,<15.0.0",
    "httpx>=0.27.0",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Typing :: Typed",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
repository = "https://github.com/supmo668/reflex-stripe"
issues = "https://github.com/supmo668/reflex-stripe/issues"

[tool.pytest.ini_options]
# addopts = "--headed"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
extend-select = ["I", "RUF", "T20"]
ignore = ["RUF012"]

[dependency-groups]
dev = [
    "coverage>=7.6.12",
    "mkdocs-material>=9.6.9",
    "mkdocstrings-python>=1.16.8",
    "pre-commit>=4.1.0",
    "pyright>=1.1.396",
    "pytest>=8.3.5",
    "pytest-playwright>=0.7.0",
    "pytest-pretty>=1.2.0",
    "ruff>=0.9.10",
    "semver>=3.0.4",
    "reflex>=0.8.0",
    "hatchling>=1.27.0",
    "uvicorn>=0.38.0",
    "psutil>=7.0.0",
]
